# tensorflow_lab

./: .gitignore  00-transformer.ipynb  01-quick-starter.ipynb  02-keras-image-clissfy.ipynb  03-keras-text-classify.ipynb  04-keras-movie-review.ipynb  LICENSE  README.md  pyproject.toml
