[project]
name = "tensorflow-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tensorflow (>=2.18.0,<3.0.0)",
    "scikit-surprise (>=1.1.4,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fasttext (>=0.9.3,<0.10.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "mlflow (>=2.20.3,<3.0.0)",
    "huggingface-hub (>=0.29.1,<0.30.0)",
    "tf-keras (>=2.18.0,<3.0.0)",
    "tensorflow-hub (>=0.16.1,<0.17.0)",
    "tensorflow-datasets (>=4.9.7,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
